--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,13 +1,13 @@
- {% extends "base.html" %}
-  {% block content%}
+ {% extends "base.html" %} {% block content%}
 <div class="container-fluid" id="jumbo-holder">
     <h1 class="text-center">To access your recipes, please log in below:</h1>
     <div class="jumbotron" id="form-holder">
-        <form action="/user-recipes">
+        <form method="post" name="login" action="">
+            {{ form.hidden_tag() }}
             <div class="row text-center">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                    <input class="place-holder" type="text" placeholder="Email">
+                    {{ form.email(size=80, class = "place-holder", placeholder=" Email")}}
                 </div>
                 <div class="col-sm-2"></div>
             </div>
@@ -15,7 +15,8 @@
             <div class="row text-center">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8">
-                    <input class="place-holder" type="text" placeholder="Password">
+                    {{ form.password(size=80, class_="place-holder", placeholder="Password")}}
+              
                 </div>
                 <div class="col-sm-2"></div>
             </div>
