added logic for a user to login

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 <div class="container-fluid" id="jumbo-holder">
     <h1 class="text-center">To access your recipes, please log in below:</h1>
     <div class="jumbotron" id="form-holder">
-        <form method="post" name="login" action="">
+        <form method="POST" name="login" action="">
             {{ form.hidden_tag() }}
             <div class="row text-center">
                 <div class="col-sm-2"></div>
