--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -39,7 +39,7 @@
                 <br>
                 <br>
                 <div class="col-sm-4">
-                    {{ form.password(size=80, class = "place-holder", placeholder=" Password")}}
+                    {{ form.password2(size=80, class = "place-holder", placeholder=" Password")}}
                 </div>
                 <div class="col-sm-2"></div>
             </div>
