--- a/app/templates/user-recipes.html
+++ b/app/templates/user-recipes.html
@@ -1,8 +1,8 @@
  {% extends "base.html" %}
   {% block content%}
 <div class="container-fluid text-center" id="jumbotron-holder">
-    
-        <h2 class="text-center">Hello John Doe</h2>
+        
+        <h2 class="text-center">Hello {{user.firstname}}</h2>
         <div class="jumbotron" id="content-holder">
 
             <button class="btn btn-large btn-primary">Add a new Recipe</button><br><br>
