--- a/app/templates/new-recipe.html
+++ b/app/templates/new-recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
  {% block content%}
 	<div class="container-fluid" id="jumbo-holder">
-    <h1 class="text-center">Create an account below to start using Yummy Recipes</h1>
+    <h1 class="text-center">{{user.firstname + " " + user.lastname}}</h1>
     <div class="jumbotron" id="form-holder">
         <form method="POST" name="new-recipe">
              {{ form.hidden_tag() }}
@@ -17,7 +17,7 @@
             </div>
             <br><br><br>
             <div class="row text-center">
-               	{{ form.content(size=80, class = "place-holder", placeholder="Enter recipe Contents ")}}
+               	{{ form.content(size=80, rows='10', cols='50', class = "place-holder", placeholder="Enter recipe Contents ")}}
                     
                
             </div><br><br><br>
