added logic for deleting a recipe

--- a/app/templates/user-recipes.html
+++ b/app/templates/user-recipes.html
@@ -30,7 +30,7 @@
                             </a>
                         </td>
                         <td>
-                            <a href="">
+                            <a href="/delete/{{ each_recipe.id }}">
                                 <p class="text-danger">Delete</p>
                             </a>
                         </td>
